# axum-template

./: .gitignore  Cargo.toml  justfile
certificates/: cert.pem  key.pem
src/: config.rs  main.rs  redirect.rs  tracer.rs
