[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.16", features = ["headers", "macros"] }
axum-macros = "0.3.7"
axum-server = { version = "0.4.7", features = ["rustls", "tls-rustls"] }
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "rt", "parking_lot"] }
tower-http = { version = "0.4.0", features = ["compression-full", "decompression-full", "request-id", "cors", "timeout", "propagate-header", "sensitive-headers"] }
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = "0.16.0"
